wireguard/network-policies/cluster-egress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cluster-egress-policy
  namespace: wireguard
spec:
  podSelector:
    matchLabels:
      kubernetes.io/metadata.name: wireguard
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values: ["smarthome"]
